--- a/Weight_interface/doc/Weight_interface/Doxyfile.in
+++ b/Weight_interface/doc/Weight_interface/Doxyfile.in
@@ -1,4 +1,3 @@
 @INCLUDE = ${CGAL_DOC_PACKAGE_DEFAULTS}
 PROJECT_NAME = "CGAL ${CGAL_DOC_VERSION} - Weights"
-INPUT = ${CMAKE_SOURCE_DIR}/Weight_interface/doc/Weight_interface/ \
-${CMAKE_SOURCE_DIR}/Weight_interface/include
+EXTRACT_ALL                =  false
